# tauriapp

./: .env  .env.example  .env.ultra-fast  .gitignore  AI_INTERVIEW_ASSISTANT_DEVELOPMENT_PLAN.md  ANALYZE_SCREEN_FIX.js  APPLICATION_FEATURES.md  BETTER_TEXT_READING_SOLUTIONS.md  CHANGELOG.md  CODE_SIGNING_README.md  CRUSH.md  ENHANCED_QA_FEATURE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INTERVIEW_SYSTEM_DOCUMENTATION.md  MACOS_BUILD_REQUIREMENTS.md  OFFLINE_REMOVAL_SUMMARY.md  PHASE_2_IMPLEMENTATION_STATUS.md  PLUELY_VS_MOCKMATE_AUDIO_COMPARISON.md  POLLINATIONS_STREAMING_FIX.md  QA_STORAGE_FIX_SUMMARY.md  README.md  RELEASE_BUILD_SUMMARY.md  RESPONSE_WINDOW_FLOW_FIXED.md  SCALING_AND_TRANSCRIPTION_FIXES.md  SPEECH_TO_TEXT_OPTIMIZATION.md  STREAMING_ANALYSIS.md  STREAMING_FIXES.md  STREAMING_OPTIMIZATIONS.md  TEMP_TOKEN_UPDATE_INSTRUCTIONS.md  TRANSCRIPTION_FIXES.md  ULTRA_FAST_IMPLEMENTATION_COMPLETE.md  ULTRA_FAST_OPTIMIZATION_PLAN.md  ULTRA_FAST_TRANSCRIPTION_GUIDE.md  WARP.md  WINDOW_CHROME_DEBUG.md  WINDOW_FIXES.md  WINDOW_RESIZE_FIX.md  audio-example.js  check_db_answers.js  (+25 more)
docs/: session-started-tracking.md
public/: ai-response.html
src/: App.tsx  ai-response-enhanced.html  globals.css  session-launch-handler.js  vite-env.d.ts
src-tauri/: ACCESSIBILITY_USAGE.md  Cargo.toml  MockMate.exe.manifest  POLLINATIONS_SSE_IMPLEMENTATION.md  REALTIME_TRANSCRIPTION_IMPLEMENTATION.md  build.rs  tauri.conf.json  test-audio.rs  test-database.js  test-pollinations-streaming.js
src-tauri/icons/: icon.icns
src-tauri/migrations/: add_session_started_at.sql
src-tauri/src/: accessibility_reader.rs  advanced_prompts.rs  audio.rs  audio_test.rs  audio_wasapi.rs  deepgram.rs  deepgram_streaming.rs  dll_injection_stealth.rs  improved_ocr.rs  lib.rs  main.rs  model_optimizer.rs  ocr.rs  openai.rs  permissions.rs  pluely_audio.rs  pluely_deepgram_integration.rs  pluely_microphone.rs  pollinations.rs  real_stealth.rs  realtime_transcription.rs  screenshot.rs  stealth_hotkeys.rs  stealth_hotkeys_simple.rs  stereo_mix_manager.rs  task_manager_stealth.rs  task_manager_stealth_simple.rs  taskbar_manager.rs  transcription_buffer.rs  wasapi_loopback.rs  wasapi_loopback_stub.rs  websocket.rs  window_manager.rs  windows_audio_capture.rs
src-tauri/src/database/: mod.rs  models.rs  postgres.rs  shared.rs  sync.rs
src-tauri/src/interview/: answers.rs  engine.rs  mod.rs  questions.rs  timer.rs
src-tauri/src/session/: activation.rs  manager.rs  mod.rs  sync.rs
src-tauri/tests/: simple_env_test.rs
src/components/: AIResponseWindow.tsx  AppWithStealth.tsx  AppWithStereoMix.tsx  HotkeyDemo.tsx  LiveTranscription.tsx  NotificationDialog.tsx  PermissionManager.tsx  RealStealthTest.tsx  ScreenshotQA.tsx  StealthModeDemo.tsx  StealthModeManager.tsx  StealthModeTest.tsx  StealthToggle.tsx  StereoMixManager.tsx  StreamingAIResponse.tsx  TranscriptionControls.tsx  TranscriptionDisplay.tsx  WindowBoundaryTest.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx
src/hooks/: useDeepgram.ts  useResponsiveWindow.ts  useStealthMode.ts
src/lib/: utils.ts
src/styles/: streaming.css
temp/: test_db_insert.rs
