[package]
name = "mockmate"
version = "0.1.0"
description = "MockMate - AI-Powered Interview Assistant Desktop App"
authors = ["MockMate Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mockmate/mockmate"
default-run = "mockmate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mockmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
cpal = "0.15"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12.1"
dotenvy = "0.15"
deepgram = "0.7.0"
rand = "0.8"
bytes = "1.0"
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }

tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
urlencoding = "2.1"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

# Windows-specific dependencies for WASAPI loopback
[target.'cfg(windows)'.dependencies]

