[package]
name = "mockmate"
version = "0.1.0"
description = "MockMate - AI-Powered Interview Assistant Desktop App"
authors = ["MockMate Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mockmate/mockmate"
default-run = "mockmate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mockmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }
dotenvy = "0.15"

[dependencies]
screenshots = "0.4"
image = "0.24"
tauri = { version = "2", features = [ "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
crossbeam = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
# cpal = "0.15"  # Replaced with wasapi for better performance like Pluely
wasapi = "0.19.0"  # Direct WASAPI access like Pluely
hound = "3.5.1"    # WAV file handling for audio processing
ringbuf = "0.4.8" # Efficient audio buffering
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12.1"
dotenvy = "0.15"
rand = "0.8"
bytes = "1.0"
tokio-stream = "0.1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.12"
argon2 = "0.5"
jsonwebtoken = "9.0"
config = "0.13"
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
openai-api-rs = "6.0"
lazy_static = "1.4.0"
schemars = "0.8.21"
indexmap = "1.9"
getrandom = "0.2"
rustls = "0.21"
tokio-rustls = "0.24"
regex = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
url = "2.4"
urlencoding = "2.1"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
] }
# Alternative hotkey library for better support
rdev = "0.4"
winapi = { version = "0.3", features = ["winuser", "oleauto", "combaseapi", "psapi", "tlhelp32", "handleapi", "memoryapi", "winbase", "processthreadsapi", "winnt", "errhandlingapi", "winreg", "ntdef", "synchapi", "libloaderapi", "mmreg", "wtypes"] }
# OCR dependencies (optional - can be enabled later)
# tesseract = "0.13"  # Requires system installation
# rimage = "0.9"


# Windows-specific dependencies for WASAPI loopback
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming", 
    "Win32_Media_MediaFoundation",
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_UI_Shell_PropertiesSystem"
] }

